[tool.poetry]
name = "actions_examples"
version = "0.1.0"
description = "A series of examples on a best practice CI workflow accessible to all teams without devops support."
authors = ["hselbie <hselbie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
looker-sdk = "^0.1.3-beta.20"
pandas = "^1.1.4"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
